using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class BarbarianCharacterController : MonoBehaviour {

    private const string
        ANIM_SPEED = "speed",
        ANIM_HORIZONTAL = "horizontal",
        ANIM_VERTICAL = "vertical",
        ANIM_JUMP = "jump",
        ANIM_ATTACK = "attack",
        ANIM_SUPER_ATTACK = "super-attack",
        ANIM_DIE = "die",
        ANIM_IDLE = "idle";

    // Use this for initialization
    void Start () {
		
	}
	
	// Update is called once per frame
	void Update () {
		
	}
}
